--- a/css/main.css
+++ b/css/main.css
@@ -91,29 +91,64 @@ header {
     height: 4rem;
     position: absolute;
     top: 40%;
-    left: 42%;
+    left: 37%;
     display: none;
-}
+    }
 .share{
-    background: rgb(118, 183, 177) url(../img/share.png) no-repeat 0.4rem 0.7rem;
+    background: rgb(118, 183, 177) url(../img/share.png) no-repeat 0.6rem 0.7rem;
     border-radius: 0.5rem;
     width: 4rem;
     height: 4rem;
     position: absolute;
     top: 40%;
-    left: 50.5%;
+    left: 52.5%;
     display: none;
 }
 .card p {
     position: absolute;
-    bottom: 5%;
-    left: 40%;
-    font-size: 1.6rem;
+    bottom: 3%;
+    left: 37%;
+    font-size: 4vmin;
     display: none;
     color: #fff;
 }
+@media (min-width: 385px) and (max-width: 639px) {
+    .eye {
+        left: 38.5%;
+    }
+    .share{
+        left: 53%;
+    }
+    .card p {
+        bottom: 3%;
+        left: 37.5%;
+    }
+}
+@media (min-width: 640px) and (max-width: 1059px) {
+    .eye {
+        left: 39%;
+    }
+    .share{
+        left: 53.5%;
+    }
+    .card p {
+        bottom: 1%;
+        left: 38%;
+        font-size: 2.5vmin;
+    }
+}
 @media (min-width: 1060px) {
-    
+    .eye {
+        left: 42%;
+    }
+    .share{
+        left: 50.5%;
+    }
+    .card p {
+        bottom: 11%;
+        left: 41%;
+        font-size: 1.6rem;
+    }
 }
 .card:hover a,
 .card:hover p{
@@ -135,11 +170,14 @@ header {
 
 /*=footer*/
 .paginator {
-    /*max-width: 50%;*
-    margin: auto;*/
-    padding: 0;
-    display: inline-block;
+    display: inline;
     text-align: center;
+}
+@media (min-width: 1190px){
+    .paginator {
+        max-width: 50%;
+        margin: auto;
+    }
 }
 .paginator li{
     list-style: none;
